[gd_scene load_steps=5 format=3 uid="uid://crxd46k35kbox"]

[ext_resource type="Script" uid="uid://5pie5y2igkdj" path="res://Scripts/GameScripts/unit_info_panel.gd" id="1_dsd7g"]
[ext_resource type="StyleBox" uid="uid://s3wx16ygm4rc" path="res://Resources/Styles/panel_Style.tres" id="1_qo1xh"]
[ext_resource type="StyleBox" uid="uid://bc0qkcohnagp" path="res://Resources/Styles/label_style.tres" id="2_2l7e7"]
[ext_resource type="LabelSettings" uid="uid://cmeaa4ys48qvb" path="res://Resources/Styles/label_settings.tres" id="3_oam1w"]

[node name="UnitInfoPanel" type="PanelContainer" node_paths=PackedStringArray("NameLabel", "HPLabel", "AttackLabel", "MoveLabel", "AttackRangeLabel")]
z_index = 15
offset_right = 34.0
offset_bottom = 60.0
size_flags_vertical = 0
theme_override_styles/panel = ExtResource("1_qo1xh")
script = ExtResource("1_dsd7g")
NameLabel = NodePath("VBoxContainer/NameLabel")
HPLabel = NodePath("VBoxContainer/HPLabel")
AttackLabel = NodePath("VBoxContainer/AttackLabel")
MoveLabel = NodePath("VBoxContainer/MoveLabel")
AttackRangeLabel = NodePath("VBoxContainer/AttackRangeLabel")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 0

[node name="NameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 0
theme_override_styles/normal = ExtResource("2_2l7e7")
label_settings = ExtResource("3_oam1w")

[node name="HPLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 0
theme_override_styles/normal = ExtResource("2_2l7e7")
label_settings = ExtResource("3_oam1w")

[node name="AttackLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 0
theme_override_styles/normal = ExtResource("2_2l7e7")
label_settings = ExtResource("3_oam1w")

[node name="MoveLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 0
theme_override_styles/normal = ExtResource("2_2l7e7")
label_settings = ExtResource("3_oam1w")

[node name="AttackRangeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 0
theme_override_styles/normal = ExtResource("2_2l7e7")
label_settings = ExtResource("3_oam1w")
